fix(blog): byline alignment

--- a/src/components/pages/blog/byline.module.scss
+++ b/src/components/pages/blog/byline.module.scss
@@ -40,6 +40,10 @@
 .byline {
   @extend .byline-base;
   margin: 16px 0;
+
+  .byline-text {
+    margin: 0;
+  }
 }
 
 .byline--small-margin {
@@ -49,6 +53,7 @@
     margin-bottom: 8px;
   }
 }
+
 
 .byline--small-margin--image {
   @extend .byline-base;
